introspection: Fix annotation for vte_terminal_feed_child

https://bugzilla.gnome.org/show_bug.cgi?id=793273